[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/PlayerStalin.gd" type="Script" id=1]
[ext_resource path="res://white_man.png" type="Texture" id=2]
[ext_resource path="res://door.png" type="Texture" id=3]
[ext_resource path="res://deftone stylus.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Title Label.gd" type="Script" id=5]
[ext_resource path="res://SAD-background.jpg" type="Texture" id=6]
[ext_resource path="res://light.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Light2D.gd" type="Script" id=8]
[ext_resource path="res://platform.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.1449, 29.0017 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 600, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 360 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 68.3984 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 75.1837 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 76.6153 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 75.1161 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 75.2332 )

[sub_resource type="DynamicFont" id=9]
size = 100

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 186.004, 14.3492 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 186.175, 14.4079 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 94.9437, 14.4176 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 13.6016, 14.5472 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 229.728, 14.5828 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 501.039, 46.6439 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 445.484, 14.5244 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 11.1427, 66.8932 )

[node name="Node2D" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
light_mask = 2
position = Vector2( 228, 632 )
collision_mask = 2
script = ExtResource( 1 )

[node name="Player Sprite" type="Sprite" parent="Player"]
position = Vector2( 0.210846, -0.00977635 )
scale = Vector2( 0.108749, 0.114993 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Ceiling" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 600, 10 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource( 2 )
one_way_collision_margin = 2.0

[node name="Left Wall" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 10, 360 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall"]
shape = SubResource( 3 )

[node name="Right Wall" type="StaticBody2D" parent="."]
position = Vector2( 1190, 360 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Wall"]
shape = SubResource( 3 )

[node name="Goal" type="Area2D" parent="."]
position = Vector2( 98.1379, 618.907 )
z_index = -3
collision_layer = 2
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Goal"]
scale = Vector2( 0.175, 0.175 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
shape = SubResource( 4 )

[node name="Title Proc Body" type="RigidBody2D" parent="."]
position = Vector2( 403.371, 639.52 )
collision_layer = 8
collision_mask = 2
mode = 1
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title Proc Body"]
shape = SubResource( 5 )

[node name="Title Proc" type="Area2D" parent="Title Proc Body"]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title Proc Body/Title Proc"]
z_index = 3
shape = SubResource( 6 )

[node name="Title Proc Body2" type="RigidBody2D" parent="."]
position = Vector2( 1135.63, 582.513 )
collision_layer = 8
collision_mask = 2
mode = 1
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title Proc Body2"]
shape = SubResource( 5 )

[node name="Title Proc2" type="Area2D" parent="Title Proc Body2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title Proc Body2/Title Proc2"]
shape = SubResource( 7 )

[node name="Title Proc Body3" type="RigidBody2D" parent="."]
position = Vector2( 273.8, 497.306 )
collision_layer = 8
collision_mask = 2
mode = 1
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title Proc Body3"]
shape = SubResource( 5 )

[node name="Title Proc3" type="Area2D" parent="Title Proc Body3/CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title Proc Body3/CollisionShape2D/Title Proc3"]
shape = SubResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Title Label" type="RichTextLabel" parent="Control"]
margin_left = 270.047
margin_top = 593.07
margin_right = 1134.05
margin_bottom = 688.07
theme = SubResource( 10 )
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
meta_underlined = false
text = "I work hard to only scrape by"
script = ExtResource( 5 )

[node name="Title Label2" type="RichTextLabel" parent="Control"]
margin_left = 276.588
margin_top = 492.779
margin_right = 1140.59
margin_bottom = 587.779
theme = SubResource( 10 )
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
meta_underlined = false
text = "A man named Stalin seized power"
script = ExtResource( 5 )

[node name="Title Label3" type="RichTextLabel" parent="Control"]
margin_left = 297.458
margin_top = 205.763
margin_right = 1161.46
margin_bottom = 396.763
theme = SubResource( 10 )
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
meta_underlined = false
text = "Weak and starved, I could not stop him if I tried"
script = ExtResource( 5 )

[node name="sky_background" type="Sprite" parent="."]
modulate = Color( 0.45098, 0.45098, 0.45098, 1 )
position = Vector2( 614.064, 410.128 )
scale = Vector2( 0.581274, 0.581274 )
z_index = -4
texture = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 15
position = Vector2( 602.096, 365.829 )
scale = Vector2( 6.38455, 6.38455 )
texture = ExtResource( 7 )
energy = 0.01
script = ExtResource( 8 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 186.646, 705.113 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="Platform"]
scale = Vector2( 0.371705, 0.311909 )
texture = ExtResource( 9 )

[node name="Platform4" type="StaticBody2D" parent="."]
position = Vector2( 672.083, 704.407 )

[node name="Sprite" type="Sprite" parent="Platform4"]
scale = Vector2( 0.371705, 0.311909 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform4"]
shape = SubResource( 13 )

[node name="Platform5" type="StaticBody2D" parent="."]
position = Vector2( 1061.66, 704.372 )

[node name="Sprite" type="Sprite" parent="Platform5"]
scale = Vector2( 0.189538, 0.311909 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform5"]
shape = SubResource( 14 )

[node name="Platform6" type="StaticBody2D" parent="."]
position = Vector2( 1139.25, 670.977 )

[node name="Sprite" type="Sprite" parent="Platform6"]
scale = Vector2( 0.0271667, 0.311909 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform6"]
shape = SubResource( 15 )

[node name="Platform3" type="StaticBody2D" parent="."]
position = Vector2( 493.995, 577.287 )

[node name="Sprite" type="Sprite" parent="Platform3"]
position = Vector2( -3.14713e-05, 0 )
scale = Vector2( 0.460585, 0.311909 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform3"]
shape = SubResource( 16 )

[node name="Platform10" type="StaticBody2D" parent="."]
position = Vector2( 905.406, 576.576 )

[node name="Sprite" type="Sprite" parent="Platform10"]
scale = Vector2( 0.225348, 0.311909 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform10"]
scale = Vector2( 0.225348, 0.311909 )
shape = SubResource( 17 )

[node name="Platform7" type="StaticBody2D" parent="."]
position = Vector2( 709.287, 484.429 )

[node name="Sprite" type="Sprite" parent="Platform7"]
scale = Vector2( 0.890907, 0.311909 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform7"]
shape = SubResource( 18 )

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2( 177.696, 629.795 )

[node name="Sprite" type="Sprite" parent="Platform2"]
position = Vector2( 0, -6.4373e-06 )
scale = Vector2( 0.0223484, 1.42919 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
shape = SubResource( 19 )

[node name="Platform8" type="StaticBody2D" parent="."]
position = Vector2( 177.696, 505.795 )

[node name="Sprite" type="Sprite" parent="Platform8"]
position = Vector2( 0, -6.4373e-06 )
scale = Vector2( 0.0223484, 1.42919 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform8"]
shape = SubResource( 19 )

[node name="Platform9" type="StaticBody2D" parent="."]
position = Vector2( 177.696, 435.256 )

[node name="Sprite" type="Sprite" parent="Platform9"]
position = Vector2( 0, -6.4373e-06 )
scale = Vector2( 0.0223484, 1.42919 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform9"]
shape = SubResource( 19 )
[connection signal="body_entered" from="Goal" to="Player" method="_on_Goal_body_entered"]
[connection signal="body_entered" from="Title Proc Body/Title Proc" to="Player" method="_on_Title_Proc_body_entered"]
[connection signal="body_entered" from="Title Proc Body2/Title Proc2" to="Player" method="_on_Title_Proc2_body_entered"]
[connection signal="body_entered" from="Title Proc Body3/CollisionShape2D/Title Proc3" to="Player" method="_on_Title_Proc3_body_entered"]
